# lingos-ai

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RESTRUCTURE_DECISIONS.md  backup_pre_phase8.sql  compose.prod.yml  docker-compose.yml  recording.webm  test_db.py
backend/: .dockerignore  Dockerfile  check_day.py  check_db.py  check_db_2.py  check_task_content.py  delete_bugged_session.py  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 17e15923f549_squashed_initial_schema.py  217aeaf4205d_add_feedback_memory_logs_and_mentor_note.py  4cbeac0620cd_drop_daily_sessions_curriculum_day_id.py  5c6d7e8f9012_admin_roles.py  9a2b3c4d5e6f_admin_monitoring_phase2.py  a1b2c3d4e5f6_restore_learning_sessions_chat.py  a3b4c5d6e7f8_streak_tables.py  aaa000000001_merge_heads.py  b1c2d3e4f5a6_drop_activity_attempts_activity_col.py  b4c5d6e7f9a0_user_course_preferences.py  b7c8d9e0f123_admin_permissions_billing_phase3.py  bfc3e301dd49_add_daily_plans_table.py  c2d3e4f5a678_challenges_foundation.py  c2d3e4f5a6b7_rename_task_archetypes_id_to_archetype_id.py  c5d6e7f8a0b1_drop_user_task_id_fks.py  c8d9e0f1a234_personalisation_and_wipe_plans.py  d1e0f234a567_legacy_head_compatibility.py  d1e2f3a4b5c6_fix_session_table_schema_drift.py  d361e3b599b2_add_points_based_scoring_tables.py  d3b66d5dd625_add_current_activity_order_to_learning_.py  d6e7f8a0b1c2_repair_activity_feedback.py  d9e0f1a2b345_curriculum_v2_tables.py  e0f1a2b3c456_sessions_tables.py  e2f3a4b5c6d7_scorecard_activities_breakdown.py  e4f5a6b7c890_v2_session_schema_compatibility.py  e7f8a0b1c2d3_phase8_drop_legacy_tables.py  f1a2b3c4d567_skill_display_labels.py  f1a2b3c4d5e6_extend_task_type_enum_for_generated_tasks.py  f2a3b4c5d6e7_repair_curriculum_weeks_week_id.py  f3a4b5c6d7e8_repair_sessions_curriculum_schema.py  f81a4fd84a55_add_learning_session.py  g2b3c4d5e6f7_fix_enum_values_to_lowercase.py  g4h5i6j7k890_merge_heads_restore_learning_sessions.py  h3c4d5e6f7g8_add_profile_personalisation_fields.py  h8i9j0k1l234_daily_activity_streak_awarded.py  i4d5e6f7g8h9_add_display_name_to_user_profiles.py  i9j0k1l2m345_admin_rework_schema.py  j0k1l2m3n456_a2z_user_progress.py  j5e6f7g8h9i0_add_purchases_and_notifications.py  k1l2m3n4o567_challenge_attempt_timer_started.py  (+13 more)
backend/app/: main.py  models.py
backend/app/ai/: __init__.py  llm.py.deprecated  request_logging.py  routes.py  task_generator.py.deprecated
backend/app/core/: ai_rate_limit.py  config.py  database.py  logging.py  mixins.py  rate_limit.py  security.py  security_headers.py  sentry.py
backend/app/email/: __init__.py  console_client.py  exceptions.py  interface.py  resend_client.py  ses_client.py  templates.py
backend/app/payments/: __init__.py  exceptions.py  interface.py  mock_client.py  razorpay_client.py  signatures.py
backend/app/scoring/: __init__.py  archetypes.py  constants.py  engine.py  types.py
backend/docs/: template_strategy_grid.md
backend/scripts/: calibrate_judge.py  check_pinecone.py  cycle5_day_specs.py  export_openapi.py  generate_cycle4_weeks.py  generate_cycle5_weeks.py  generate_cycle6_weeks.py  golden_set.json  grant_admin.py  inspect_db.py  rebuild_feedback_memory.py  reset_user_cache.py  run_evals.py  seed_a2z_challenge.py  seed_curriculum.py  seed_curriculum_v2.py  seed_ielts_challenge.py  split_band_sources.py  start-prod.sh
backend/tests/: conftest.py  test_a2z_evaluator.py  test_a2z_service.py  test_admin_api.py  test_admin_rework.py  test_agent_inputs.py  test_all_calendar_days_integrity.py  test_archetype_registry.py  test_archetype_sweep.py  test_authoring_learning_session.py  test_calibrate_judge.py  test_challenges_foundation.py  test_challenges_generator.py  test_challenges_phase4.py  test_challenges_routes.py  test_challenges_speaking.py  test_composer.py  test_config_prod_guard.py  test_contract_projection.py  test_contract_validation_gate.py  test_curriculum_rotation.py  test_curriculum_teacher_steps.py  test_curriculum_topics_schema.py  test_curriculum_v2_data.py  test_curriculum_v2_db.py  test_curriculum_widget_reading.py  test_cycle1_day_integrity.py  test_cycle2_day_integrity.py  test_cycle4_day_integrity.py  test_cycle5_day_integrity.py  test_cycle6_day_integrity.py  test_daily_plan_repository.py  test_diagnosis_seeds_points_only.py  test_email_service.py  test_error_correction_flow.py  test_error_spotting_flow.py  test_evaluator_strategy_dispatch.py  test_evaluator_with_focus.py  test_feedback_rag.py  test_feedback_service.py  (+44 more)
backend/tests/factories/: __init__.py  progress.py  sessions.py  users.py
(+876 files in other folders)
