[project]
name = "ai-english-tutor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "azure-cognitiveservices-speech>=1.48.0",
    "bcrypt==4.0.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "langsmith>=0.7.37",
    "openai>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pinecone>=8.1.2",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
