[project]
name = "ai-english-tutor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "azure-cognitiveservices-speech>=1.50.0",
    "bcrypt==4.0.1",
    "fastapi>=0.137.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langgraph>=1.1.10",
    "langsmith>=0.7.37",
    "openai>=2.42.0",
    "passlib[bcrypt]>=1.7.4",
    "pinecone>=8.1.2",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=5.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.mypy]
python_version = "3.11"

# Third-party libs that ship no type stubs / py.typed marker. We don't type-check
# their internals, so silence "missing stubs" noise without weakening app checks.
[[tool.mypy.overrides]]
module = [
    "jose.*",
    "passlib.*",
    "azure.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-q --strict-markers"
markers = [
    "unit: fast, isolated; no DB, no HTTP, no network",
    "integration: real DB session and/or TestClient; multiple modules",
    "slow: opt-in heavier tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/ai/graphs/*", "*/migrations/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
