[project]
name = "ai-english-tutor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "azure-cognitiveservices-speech>=1.48.0",
    "bcrypt==5.0.0",
    "boto3>=1.35.0",
    "fastapi>=0.136.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langsmith>=0.7.37",
    "openai>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pinecone>=8.1.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=5.0",
    "sentry-sdk[fastapi]>=2.63.0",
    "sqlalchemy>=2.0.49",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.mypy]
python_version = "3.11"

# Third-party libs that ship no type stubs / py.typed marker. We don't type-check
# their internals, so silence "missing stubs" noise without weakening app checks.
[[tool.mypy.overrides]]
module = [
    "jose.*",
    "passlib.*",
    "azure.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-q --strict-markers"
markers = [
    "unit: fast, isolated; no DB, no HTTP, no network",
    "integration: real DB session and/or TestClient; multiple modules",
    "slow: opt-in heavier tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/ai/graphs/*", "*/migrations/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
